# infra

./: .editorconfig  .env.sample  .envrc  .gitignore  .prettierignore  .sops.yaml  CLAUDE.md  Makefile  README.md  SPIKE-STATUS.md  justfile  manifest  package-lock.json  package.json  pqihl3ijjhlqnr7kdim5en4lehqdtvfs  renovate.json  techstack.md  techstack.yml
ansible/: .env.sample  .gitignore  Makefile  ansible.cfg  justfile  play-0-uptime.yml  play-9-test-nginx.yml  play-any--cleanup-clients.yml  play-any--cleanup-jms.yml  play-any--fail2ban.yml  play-any--fix-fstab-swap.yml  play-any--git-patch.yml  play-any--reboot.yml  play-any--restart-docker.yml  play-any--tailscale-0-install.yml  play-any--tailscale-1-up.yml  play-any--tailscale-2-add-cert.yml  play-any--tailscale-2-cert.yml  play-any--tailscale-2-up-ssh.yml  play-any--tailscale-3-up-ssh.yml  play-any--tailscale-8-rm.yml  play-any--tailscale-9-down.yml  play-any--update-client-config.yml  play-any--update.yml  play-any--uptime.yml  play-datacenter--0-initialize.yml  play-datacenter--1-configure.yml  play-datacenter--2-startup.yml  play-ghost--0-backup.yml  play-k3s--bootstrap.yml  play-k3s--capi.yml  play-k3s--cluster.yml  play-k3s--galaxy.yml  play-k3s--longhorn.yml  play-k3s--ops-mgmt.yml  play-k3s--reset.yml  play-k3s--teardown.yml  play-nomad-cluster--0-initialize.yml  play-nomad-cluster--1-configure.yml  play-nomad-cluster--2-startup.yml  (+51 more)
ansible/inventory/: aws_ec2.yml  digitalocean.yml  linode.yml
ansible/requirements/: collections.yml  requirements-local.txt  requirements.txt  roles.yml
cdktf/: main.ts  (+4 more)
(+1230 files in other folders)
