[project]
name = "freecodecamp-ansible"
version = "0.1.0"
description = "freeCodeCamp.org infrastructure ansible configuration"
requires-python = ">=3.10"
dependencies = [
  "ansible>=10.7.0",
  "ansible-specdoc>=0.0.19",
  "boto3>=1.39.7",
  "botocore>=1.39.7",
  "docker>=7.1.0",
  "linode-api4>=5.33.0",
  "polling>=0.3.2",
]

[project.optional-dependencies]
dev = []

[dependency-groups]
dev = ["ansible-lint>=25.6.1", "types-requests>=2.32.4.20250611"]
